cleanups #2
